--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,10 @@
     ]
   },
   "functions": {
-    "source": "functions"
+    "source": "functions",
+    "runtime": "nodejs20",
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" install"
+    ]
   }
 }
